
Some optimization this morning; cut the # of allocations significantly. Down to 0.25s per doCFR(). Gotta switch modes and prep for class now, back to it this weekend with the intelligent threading implementation.

OK, I couldn't stop working on it in the shower! I've eliminated the calls to deepcopy(), the last major speedbump. doCFR() now takes about 0.16s. But there's a rare bug where the number of play hands isn't matching the number of show hands in doCFR(). That's a weird one! UPDATE: solved. swapped dealer and pone in one key line of doCFR().

Afternoon: returned to the multithreading, but did it correctly this time with threadedCFR() and threadednaiveplay(). Using @threads, I'm getting full CPU utilization. (!!!) @btime on testthread, which uses @threads to run 100 deals, gives 5.1s. That's 20 / s (on 6 cores). 4 weeks of training ==> 40,000,000 deals. IOW, 10,000,000 deals per week, more than 1,000,000 deals per day.





******* TODO *******
********************


IMPORTANT: WHEN I IMPLEMENT THE STATE SAVING, MAKE SURE I SAVE phDealerProbs and phPoneProbs along with db and M!!

TODO: Test the phDealerProbs and phPoneProbs update steps in doCFR  (lines 266-271) to make sure they do what I think they do.

TODO: Currently in optimalplay, advancestate(), and probably others, I am calling something like [ms.field for ms in model]. I think it would be faster to use a Tables.jl format, so I can access the model column-wise and just say model.field.
STATUS: Low priority. naivesolve() is already pretty quick. If bayesiansolve() is on the edge of fast enough, it's worth looking at this optimization.
UPDATE: When I put the probability stuff back into naiveplay(), it slowed down a lot. Bump that priority!